--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div>
                     <h3 id="clicks"> current clicks are 0 </h3><hr>
                     <h3 id="upgrade1"> click +1 is 0 </h3><hr>
-                    <h3>current click +50 is 0</h3><hr>
+                    <h3>click +50 is 0</h3><hr>
                     <h3>idle rookie is 0</h3><hr>
                     <h3>idle boss is 0</h3><hr>
                 </div>
@@ -39,7 +39,7 @@
 
         <div class="col ">
             <button onclick="click1()" class="bg-warning rounded">CLICK +1</button>
-            <p>cost: 50</p>
+            <p id="c1-price">cost: 50</p>
             <button class="bg-warning rounded">CLICK +50</button>
             <p>cost: 500</p>
             <button class="bg-warning rounded">IDLE ROOKIE x 100</button>
