--- a/index.html
+++ b/index.html
@@ -26,27 +26,28 @@
 
 
 
-            <div class="col-6">
+            <div class="col-6 ">
                 <div>
-                    <h5 id="clicks"> current clicks are 0 </h5><hr>
-                    <h5 id="upgrade1"> click +1 is 0 </h5><hr>
-                    <h5 id="upgrade2">click +50 is 0</h5><hr>
-                    <h5>idle rookie is 0</h5><hr>
-                    <h5>idle boss is 0</h5><hr>
-                    <h5 id="click-tally">total click power is 1</h5><hr>
+                    <h5 id="clicks"> Current clicks are 0 </h5><hr>
+                    <h5 id="upgrade1"> Cheese knives purchased 0 </h5><hr>
+                    <h5 id="upgrade2">Cheese wheels purchased 0</h5><hr>
+                    <h5 id="upgrade3">Idle rookie is 0</h5><hr>
+                    <h5 id="upgrade4">Idle boss is 0</h5><hr>
+                    <h5 id="click-tally">Total click power is 1</h5><hr>
+                    <h5>Total idle power is 0</h5><hr>
                 </div>
             </div>
         </div>
 
         <div class="col ">
-            <button onclick="click1()" class="bg-warning rounded">CLICK +1</button>
-            <p id="c1-price">cost: 50</p>
-            <button onclick="click2()" class="bg-warning rounded">CLICK +50</button>
-            <p id="c2-price">cost: 500</p>
-            <button class="bg-warning rounded">IDLE ROOKIE x 100</button>
-            <p>cost: 2,500</p>
-            <button class="bg-warning rounded">IDLE BOSS x 250</button>
-            <p>cost: 10,000</p>
+            <button onclick="click1()" class="bg-warning rounded">CHEESE KNIFE +1</button>
+            <p id="c1-price">Cost: 50</p>
+            <button onclick="click2()" class="bg-warning rounded">CHEESE WHEEL +50</button>
+            <p id="c2-price">Cost: 500</p>
+            <button onclick="click3()" class="bg-warning rounded">IDLE ROOKIE x 100</button>
+            <p id="c3-price">Cost: 2,500</p>
+            <button onclick="click4()" class="bg-warning rounded">IDLE BOSS x 250</button>
+            <p id="c4-price">Cost: 10,000</p>
         </div>
 
 
