--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h5 id="upgrade3">Idle rookie is 0</h5><hr>
                     <h5 id="upgrade4">Idle boss is 0</h5><hr>
                     <h5 id="click-tally">Total click power is 1</h5><hr>
-                    <h5>Total idle power is 0</h5><hr>
+                    <h5 id="idle-tally">Total idle power is 0</h5><hr>
                 </div>
             </div>
         </div>
@@ -44,10 +44,10 @@
             <p id="c1-price">Cost: 50</p>
             <button onclick="click2()" class="bg-warning rounded">CHEESE WHEEL +50</button>
             <p id="c2-price">Cost: 500</p>
-            <button onclick="click3()" class="bg-warning rounded">IDLE ROOKIE x 100</button>
-            <p id="c3-price">Cost: 2,500</p>
-            <button onclick="click4()" class="bg-warning rounded">IDLE BOSS x 250</button>
-            <p id="c4-price">Cost: 10,000</p>
+            <button onclick="click3()" class="bg-warning rounded">IDLE ROOKIE + 100</button>
+            <p id="c3-price">Cost: 2500</p>
+            <button onclick="click4()" class="bg-warning rounded">IDLE BOSS + 250 </button>
+            <p id="c4-price">Cost: 10000</p>
         </div>
 
 
