--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cheese all day!</title>
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet'
         integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous'>
     <link rel="stylesheet" href="style.css">
@@ -18,7 +18,7 @@
     </header>
     <main class="container-fluid">
         <div class="row  ">
-            <div class="col-md-6 text-center">
+            <div class="col-md-4 text-center">
                 <img onclick="mine()"
                     src="https://images.unsplash.com/photo-1479090793912-eb9929f4fdb2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80"
                     alt="i am the moon foo">
@@ -26,30 +26,37 @@
 
 
 
-            <div class="col-6 ">
+            <div class="col-md-4 ">
                 <div>
-                    <h5 id="clicks"> Current clicks are 0 </h5><hr>
-                    <h5 id="upgrade1"> Cheese knives purchased 0 </h5><hr>
-                    <h5 id="upgrade2">Cheese wheels purchased 0</h5><hr>
-                    <h5 id="upgrade3">Idle rookie is 0</h5><hr>
-                    <h5 id="upgrade4">Idle boss is 0</h5><hr>
-                    <h5 id="click-tally">Total click power is 1</h5><hr>
-                    <h5 id="idle-tally">Total idle power is 0</h5><hr>
+                    <h5 id="clicks"> Current clicks are 0 </h5>
+                    <hr>
+                    <h5 id="upgrade1"> Cheese knives purchased 0 </h5>
+                    <hr>
+                    <h5 id="upgrade2">Cheese wheels purchased 0</h5>
+                    <hr>
+                    <h5 id="upgrade3">Idle rookie is 0</h5>
+                    <hr>
+                    <h5 id="upgrade4">Idle boss is 0</h5>
+                    <hr>
+                    <h5 id="click-tally">Total click power is 1</h5>
+                    <hr>
+                    <h5 id="idle-tally">Total idle power is 0</h5>
+                    <hr>
                 </div>
             </div>
-        </div>
 
-        <div class="col ">
-            <button onclick="click1()" class="bg-warning rounded">CHEESE KNIFE +1</button>
-            <p id="c1-price">Cost: 50</p>
-            <button onclick="click2()" class="bg-warning rounded">CHEESE WHEEL +50</button>
-            <p id="c2-price">Cost: 500</p>
-            <button onclick="click3()" class="bg-warning rounded">IDLE ROOKIE + 100</button>
-            <p id="c3-price">Cost: 2500</p>
-            <button onclick="click4()" class="bg-warning rounded">IDLE BOSS + 250 </button>
-            <p id="c4-price">Cost: 10000</p>
-        </div>
 
+            <div class="col-md-4 ">
+                <button onclick="click1()" class="bg-warning rounded">CHEESE KNIFE +1</button>
+                <p id="c1-price">Cost: 50</p>
+                <button onclick="click2()" class="bg-warning rounded">CHEESE WHEEL +50</button>
+                <p id="c2-price">Cost: 500</p>
+                <button onclick="click3()" class="bg-warning rounded">IDLE ROOKIE + 100</button>
+                <p id="c3-price">Cost: 2500</p>
+                <button onclick="click4()" class="bg-warning rounded">IDLE BOSS + 250 </button>
+                <p id="c4-price">Cost: 10000</p>
+            </div>
+        </div>
 
     </main>
 
