--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@
                 <p id="c3-price">Cost: 2500</p>
                 <button onclick="click4()" class="bg-warning rounded">IDLE BOSS + 250 </button>
                 <p id="c4-price">Cost: 10000</p>
+                
             </div>
         </div>
+        <div class="bg-light">
 
+            <button onclick="easteregg()" class="easteregg"></button>
+        </div>
     </main>
 
     <script src="main.js"></script>
