--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
 
             <div class="col-md-4 ">
-                <button onclick="click1()" class="bg-warning rounded">CHEESE KNIFE +1</button>
+                <button id="test1" onclick="click1()" class="bg-warning rounded effect">CHEESE KNIFE +1</button>
                 <p id="c1-price">Cost: 50</p>
-                <button onclick="click2()" class="bg-warning rounded">CHEESE WHEEL +50</button>
+                <button id="test2" onclick="click2()" class="bg-warning rounded effect">CHEESE WHEEL +50</button>
                 <p id="c2-price">Cost: 500</p>
-                <button onclick="click3()" class="bg-warning rounded">IDLE ROOKIE + 100</button>
+                <button id="test3" onclick="click3()" class="bg-warning rounded effect">IDLE ROOKIE + 100</button>
                 <p id="c3-price">Cost: 2500</p>
-                <button onclick="click4()" class="bg-warning rounded">IDLE BOSS + 250 </button>
+                <button id="test4" onclick="click4()" class="bg-warning rounded effect">IDLE BOSS + 250 </button>
                 <p id="c4-price">Cost: 10000</p>
                 
             </div>
